make input field required

--- a/discord-gallery/index.html
+++ b/discord-gallery/index.html
@@ -49,6 +49,7 @@
         name="url"
         type="url"
         placeholder="Enter a Discord-based gallery link."
+        required
       />
       <button type="submit">show</button>
     </form>
