add autoload feature

--- a/discord-gallery/index.html
+++ b/discord-gallery/index.html
@@ -25,7 +25,7 @@
         type="url"
         placeholder="Enter a Discord-based gallery link."
       />
-      <button type="submit">show</button>
+      <button type="submit" id="show-btn">show</button>
     </form>
 
     <div class="gallery-container">
